Fix for iOS to make scrollbar functional and dropdown usable simountainosly

--- a/scss/ui/_collapse.scss
+++ b/scss/ui/_collapse.scss
@@ -2,6 +2,13 @@
   overflow: hidden;
   position: relative;
   transition: all 0.3s;
+  height: 100%;
+}
+
+.collapse-container-no-height {
+  overflow: hidden;
+  position: relative;
+  transition: all 0.3s;
 }
 
 .collapse {
