--- a/scss/ui/_dropdown.scss
+++ b/scss/ui/_dropdown.scss
@@ -7,7 +7,7 @@
   height: 100%;
   position: relative;
 }
-.dropdown .collapse-container {
+.dropdown .collapse-container-no-height {
   position: absolute;
   width: 100%;
 }
